--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "eslint-config-planetary": "^0.1.1",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
     "file-loader": "^0.9.0",
+    "firebase": "^3.9.0",
     "html-webpack-plugin": "2.26.0",
     "image-webpack-loader": "^2.0.0",
     "imagemin-cli": "^3.0.0",
     "inline-manifest-webpack-plugin": "^3.0.1",
+    "moment": "^2.18.1",
     "npm-run-all": "^2.3.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "9.1.0",
@@ -62,7 +64,7 @@
     "rimraf": "^2.5.4",
     "serve": "^5.1.2",
     "style-loader": "^0.13.1",
-    "stylelint": "7.8.0",
+    "stylelint": "7.10.0",
     "stylelint-config-planetary": "^1.0.1",
     "stylelint-webpack-plugin": "^0.4.2",
     "url-loader": "^0.5.7",
